syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sp.authGrpcService";

service UserService {
  // Request User existence
  rpc GetUser (UserGRPCRequest) returns (UserGRPCResponse);
}

// Request contains a user id
message UserGRPCRequest {
  string userName = 1;  // userName as strings
  string email    = 2;
  string password = 3;
}

// Response contains existence of user
message UserGRPCResponse {
  User user = 1;
}

message User{
  int64 id = 1;
  repeated int64 authority = 2;
}
